C intro file updated

--- a/c intro.html
+++ b/c intro.html
@@ -3,7 +3,7 @@
        <title>C language</title>
   </head>
   <body>
-      <h1>C language is high language</h1>
+      <h1>C language is high level language</h1>
       <h2>it is procedural language</h2>
       <h3>it is compiled language</h3>
   </body>
