--- a/hello.html
+++ b/hello.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-<title>Komal Gopale</title>
+<title>HTML program</title>
 </head>
 <body>
-komal gopale
+Hello HTML!!!
 </body>
 </html>
